	PR c++/8720 	* spew.c (remove_last_token): Make sure that last_chunk is set 	correctly.

PR c++/8615
	* error.c (dump_expr): Handle character constants with
	TREE_OVERFLOW set.

	PR c++/8720
	* g++.dg/parse/defarg1.C: New test.

	PR c++/8615
	* g++.dg/template/char1.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@59757 138bc75d-0d04-0410-961f-82ee72b054a4