gcc/testsuite/g++.dg/parse/defarg1.C
@@ -1,0 +1,5 @@
+class A
+{
+public:
+    A(int nBits = ((int)0x8) | ((int)0x4) | ((int)0x2));
+};
